baseline one-r model submitted

--- a/notebooks/baseline.ipynb
+++ b/notebooks/baseline.ipynb
@@ -1213,7 +1213,7 @@
    "id": "7f7873f0",
    "metadata": {},
    "source": [
-    "According to this, the column `DU` gives the best score at split point 2.27601 overall. We can make a simple model based off this approach. This will be a variant of what is called the [OneR](https://link.springer.com/article/10.1023/A:1022631118932) classifier."
+    "According to this, the column `DU` gives the best score at split point `2.27601` overall. We can make a simple model based off this approach. This will be a variant of what is called the [OneR](https://link.springer.com/article/10.1023/A:1022631118932) classifier."
    ]
   },
   {
@@ -1223,8 +1223,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from numpy import random\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
+    "random.seed(42)\n",
     "one_r_train, one_r_val = train_test_split(df_train_n,  test_size=0.25)"
    ]
   },
@@ -1288,62 +1290,62 @@
     {
      "data": {
       "text/plain": [
-       "{'AB': (0.410208, 0.35281387905213274),\n",
-       " 'AF': (2823.29663, 0.35724190866995587),\n",
-       " 'AH': (117.170886, 0.3779194957048336),\n",
-       " 'AM': (149.318758, 0.3609105741224039),\n",
-       " 'AR': (15.973224, 0.3684987466681436),\n",
-       " 'AX': (17.877462, 0.37592969382891867),\n",
-       " 'AY': (0.595602, 0.37592969382891867),\n",
-       " 'AZ': (8.520304, 0.3789134523026233),\n",
-       " 'BC': (13.500788, 0.3550724560499435),\n",
-       " 'BD ': (12083.34891, 0.37592969382891867),\n",
-       " 'BN': (20.8329, 0.3707394688622878),\n",
-       " 'BP': (369.34407, 0.3718284509406249),\n",
-       " 'BQ': (115.695865, 0.36740725189507994),\n",
-       " 'BR': (4291.904627, 0.37687518279877813),\n",
-       " 'BZ': (2885.319798, 0.3754958283567254),\n",
-       " 'CB': (18.299281, 0.37792252321358455),\n",
-       " 'CC': (0.28939032, 0.36629236555563865),\n",
-       " 'CD ': (88.15936, 0.36554117602111524),\n",
-       " 'CF': (1.8504485, 0.36642812739167485),\n",
-       " 'CH': (0.012338, 0.3786568763505195),\n",
-       " 'CL': (1.24754, 0.3790680163512013),\n",
-       " 'CR': (0.689775, 0.3459180650047119),\n",
-       " 'CS': (62.2516675, 0.3731018554335032),\n",
-       " 'CU': (1.274427, 0.3773706669092076),\n",
-       " 'CW ': (35.67944, 0.37539830734164314),\n",
-       " 'DA': (29.1194, 0.3502313426230369),\n",
-       " 'DE': (155.36692, 0.3606960173021779),\n",
-       " 'DF': (0.500175, 0.3609171086256108),\n",
-       " 'DH': (0.240504, 0.3684894287361775),\n",
-       " 'DI': (247.183545, 0.34709587925166646),\n",
-       " 'DL': (134.1642, 0.3731018554335032),\n",
-       " 'DN': (59.068544, 0.3735437010139049),\n",
-       " 'DU': (2.034615, 0.32022256415000827),\n",
-       " 'DV': (2.19891, 0.37873736565746996),\n",
-       " 'DY': (4.33478, 0.3720829297717444),\n",
-       " 'EB': (6.269316, 0.362311966764758),\n",
-       " 'EE': (1.463253, 0.3583158561543151),\n",
-       " 'EG': (442.8857, 0.3751313931839531),\n",
-       " 'EH': (0.438048, 0.36065017309052727),\n",
-       " 'EL': (46.05744, 0.376385296535244),\n",
-       " 'EP': (224.078075, 0.3746250408832441),\n",
-       " 'EU': (6.537624, 0.36772309442164614),\n",
-       " 'FC': (14.131488, 0.37563706204416325),\n",
-       " 'FD ': (12.135228, 0.3590207172936892),\n",
-       " 'FE': (17823.17036, 0.36251432358030733),\n",
-       " 'FI': (8.9724075, 0.36345282538223744),\n",
-       " 'FL': (10.2231498, 0.34148798779292655),\n",
-       " 'FR': (4.20935, 0.3687253420114961),\n",
-       " 'FS': (2.50601, 0.3783006196250608),\n",
-       " 'GB': (62.667574, 0.3783006196250608),\n",
-       " 'GE': (771.058022, 0.37815525076999884),\n",
-       " 'GF': (29405.20352, 0.3613433552037832),\n",
-       " 'GH': (61.028121, 0.37687518279877813),\n",
-       " 'GI': (15.72778, 0.3775191541909772),\n",
-       " 'GL': (0.1085625, 0.34543914202804354),\n",
-       " 'EJ': (0, 0.37954117434190743)}"
+       "{'AB': (0.581128, 0.3500151266645586),\n",
+       " 'AF': (2807.2121, 0.3482960305933906),\n",
+       " 'AH': (196.117971, 0.37031622929971825),\n",
+       " 'AM': (113.124119, 0.3677805771621117),\n",
+       " 'AR': (15.870966, 0.36607803019531715),\n",
+       " 'AX': (17.877462, 0.3701715230565572),\n",
+       " 'AY': (0.038976, 0.372511904676532),\n",
+       " 'AZ': (23.626198, 0.3735437010139049),\n",
+       " 'BC': (13.500788, 0.35865783745331065),\n",
+       " 'BD ': (10563.27538, 0.37017152305655715),\n",
+       " 'BN': (20.8329, 0.36082123208699335),\n",
+       " 'BP': (282.245337, 0.36079488319104713),\n",
+       " 'BQ': (69.65249, 0.36180119785038894),\n",
+       " 'BR': (5161.327397, 0.36527011004085347),\n",
+       " 'BZ': (2885.319798, 0.36963503519601426),\n",
+       " 'CB': (12.931737, 0.37244503925274197),\n",
+       " 'CC': (0.61375644, 0.3617285103240913),\n",
+       " 'CD ': (85.68186, 0.3631411826566342),\n",
+       " 'CF': (1.8504485, 0.36160897217069404),\n",
+       " 'CH': (0.012338, 0.3725637613110524),\n",
+       " 'CL': (1.24754, 0.3725459888575431),\n",
+       " 'CR': (0.527325, 0.34941117879168376),\n",
+       " 'CS': (62.2516675, 0.3671272819598272),\n",
+       " 'CU': (1.125468, 0.366462462615929),\n",
+       " 'CW ': (35.67944, 0.3672847631433858),\n",
+       " 'DA': (29.1194, 0.3463316955107069),\n",
+       " 'DE': (155.36692, 0.36119828797693376),\n",
+       " 'DF': (0.500175, 0.3650918054126017),\n",
+       " 'DH': (0.2719335, 0.362288870397952),\n",
+       " 'DI': (192.67764, 0.34941117879168376),\n",
+       " 'DL': (134.1642, 0.3646293261032984),\n",
+       " 'DN': (21.024744, 0.36748569748798376),\n",
+       " 'DU': (2.262216, 0.3196074664465314),\n",
+       " 'DV': (1.74307, 0.37176172009930203),\n",
+       " 'DY': (3.890072, 0.3676248337188574),\n",
+       " 'EB': (6.269316, 0.35697558261424034),\n",
+       " 'EE': (1.463253, 0.35748838200348587),\n",
+       " 'EG': (6845.912275, 0.3720728224305451),\n",
+       " 'EH': (1.521, 0.3527183592451205),\n",
+       " 'EL': (11.094798, 0.3725637613110524),\n",
+       " 'EP': (224.078075, 0.36960833445153146),\n",
+       " 'EU': (6.537624, 0.36450134846788734),\n",
+       " 'FC': (13.286112, 0.3705960987901368),\n",
+       " 'FD ': (8.151501, 0.35395076856984536),\n",
+       " 'FE': (28141.50595, 0.3638562145037893),\n",
+       " 'FI': (8.9724075, 0.3603920499475795),\n",
+       " 'FL': (6.720894827, 0.34161499102282883),\n",
+       " 'FR': (2.86346, 0.3523235128808954),\n",
+       " 'FS': (0.88049, 0.36984546183970063),\n",
+       " 'GB': (34.845292, 0.36994696490448187),\n",
+       " 'GE': (771.058022, 0.3735437010139049),\n",
+       " 'GF': (14412.89425, 0.36657418543636233),\n",
+       " 'GH': (62.47559, 0.3677289926805099),\n",
+       " 'GI': (105.603748, 0.3712885732260451),\n",
+       " 'GL': (0.121055405, 0.34590901176068733),\n",
+       " 'EJ': (0, 0.37298104861476167)}"
       ]
      },
      "execution_count": 30,
@@ -1365,7 +1367,7 @@
     {
      "data": {
       "text/plain": [
-       "('DU', (2.034615, 0.32022256415000827))"
+       "('DU', (2.262216, 0.3196074664465314))"
       ]
      },
      "execution_count": 31,
@@ -1387,9 +1389,65 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "128a2c02",
+   "metadata": {},
+   "source": [
+    "According to this, `DU` still remains the best split at split point `2.262216`. We then use this as a simple model One R  and make predictions for the validation set."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "e6380afa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "preds = one_r_val_x[\"DU\"] <= 2.262216"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4960b1b",
+   "metadata": {},
+   "source": [
+    "From this we can calculate the mean absolute error to help us evaluate the model and set a baseline."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "f979ab4b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.864516129032258"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import mean_absolute_error\n",
+    "mean_absolute_error(one_r_val_y, preds)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3b97697",
+   "metadata": {},
+   "source": [
+    "The error is relatively large suggesting that this baseline is very inaccurate, meaning One R is not suitable for this data."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7c133091",
+   "id": "1aa6487b",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -1397,7 +1455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6380afa",
+   "id": "2242b233",
    "metadata": {},
    "outputs": [],
    "source": []
