--- a/notebooks/random-forest-explorations.ipynb
+++ b/notebooks/random-forest-explorations.ipynb
@@ -3668,7 +3668,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "6360a895",
+   "id": "4e2ec332",
    "metadata": {},
    "outputs": [
     {
@@ -3689,7 +3689,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d01bf4d6",
+   "id": "7c251f64",
    "metadata": {},
    "source": [
     " It seems slightly worse than our best one yet. We can submit it just to see what score it lands on the leaderboard."
@@ -3698,7 +3698,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "bbd53f3c",
+   "id": "812e63ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3713,10 +3713,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9c107542",
+   "id": "0436c74f",
    "metadata": {},
    "source": [
-    "This achieved a score of 0.4, so probably not better than just "
+    "This achieved a score of 0.4, so probably not better than just removing the low importance features by score"
    ]
   },
   {
