add the histogram gradient boosting version

--- a/notebooks/rf-kfold.ipynb
+++ b/notebooks/rf-kfold.ipynb
@@ -1060,7 +1060,7 @@
    "id": "f833160b",
    "metadata": {},
    "source": [
-    "Because of the class imbalance, we'll use stratified K-fold for our train/test splits. \n",
+    "Because of the small dataset size, we'll use stratified K-fold for our train/test splits. \n",
     "\n",
     "The competition uses the balanced log loss metric which is explained more [here][0]. For our purposes, we'll use the simple implementation.\n",
     "\n",
