add oversampled example

--- a/notebooks/hgb-kfold-oversampled.ipynb
+++ b/notebooks/hgb-kfold-oversampled.ipynb
@@ -806,86 +806,12 @@
       " 56  GL      616 non-null    float64\n",
       " 57  Class   617 non-null    int64  \n",
       "dtypes: float64(55), int64(1), object(2)\n",
-      "memory usage: 279.7+ KB\n",
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 5 entries, 0 to 4\n",
-      "Data columns (total 57 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   Id      5 non-null      object \n",
-      " 1   AB      5 non-null      float64\n",
-      " 2   AF      5 non-null      float64\n",
-      " 3   AH      5 non-null      float64\n",
-      " 4   AM      5 non-null      float64\n",
-      " 5   AR      5 non-null      float64\n",
-      " 6   AX      5 non-null      float64\n",
-      " 7   AY      5 non-null      float64\n",
-      " 8   AZ      5 non-null      float64\n",
-      " 9   BC      5 non-null      float64\n",
-      " 10  BD      5 non-null      float64\n",
-      " 11  BN      5 non-null      float64\n",
-      " 12  BP      5 non-null      float64\n",
-      " 13  BQ      5 non-null      float64\n",
-      " 14  BR      5 non-null      float64\n",
-      " 15  BZ      5 non-null      float64\n",
-      " 16  CB      5 non-null      float64\n",
-      " 17  CC      5 non-null      float64\n",
-      " 18  CD      5 non-null      float64\n",
-      " 19  CF      5 non-null      float64\n",
-      " 20  CH      5 non-null      float64\n",
-      " 21  CL      5 non-null      float64\n",
-      " 22  CR      5 non-null      float64\n",
-      " 23  CS      5 non-null      float64\n",
-      " 24  CU      5 non-null      float64\n",
-      " 25  CW      5 non-null      float64\n",
-      " 26  DA      5 non-null      float64\n",
-      " 27  DE      5 non-null      float64\n",
-      " 28  DF      5 non-null      float64\n",
-      " 29  DH      5 non-null      float64\n",
-      " 30  DI      5 non-null      float64\n",
-      " 31  DL      5 non-null      float64\n",
-      " 32  DN      5 non-null      float64\n",
-      " 33  DU      5 non-null      float64\n",
-      " 34  DV      5 non-null      float64\n",
-      " 35  DY      5 non-null      float64\n",
-      " 36  EB      5 non-null      float64\n",
-      " 37  EE      5 non-null      float64\n",
-      " 38  EG      5 non-null      float64\n",
-      " 39  EH      5 non-null      float64\n",
-      " 40  EJ      5 non-null      object \n",
-      " 41  EL      5 non-null      float64\n",
-      " 42  EP      5 non-null      float64\n",
-      " 43  EU      5 non-null      float64\n",
-      " 44  FC      5 non-null      float64\n",
-      " 45  FD      5 non-null      float64\n",
-      " 46  FE      5 non-null      float64\n",
-      " 47  FI      5 non-null      float64\n",
-      " 48  FL      5 non-null      float64\n",
-      " 49  FR      5 non-null      float64\n",
-      " 50  FS      5 non-null      float64\n",
-      " 51  GB      5 non-null      float64\n",
-      " 52  GE      5 non-null      float64\n",
-      " 53  GF      5 non-null      float64\n",
-      " 54  GH      5 non-null      float64\n",
-      " 55  GI      5 non-null      float64\n",
-      " 56  GL      5 non-null      float64\n",
-      "dtypes: float64(55), object(2)\n",
-      "memory usage: 2.4+ KB\n"
+      "memory usage: 279.7+ KB\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(None, None)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_train.info(), df_test.info()"
+    "df_train.info()"
    ]
   },
   {
@@ -895,7 +821,7 @@
    "source": [
     " # Data Processing\n",
     " \n",
-    "We'll do some simple processing. We'll replace null values with the mode of their columns, and replace the categorical columns `EJ` and `Id` with numeric codes representing their levels."
+    "We'll do some simple processing. We'll replace the categorical columns `EJ` and `Id` with numeric codes representing their levels."
    ]
   },
   {
@@ -1017,36 +943,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "db709e2f",
-   "metadata": {},
-   "source": [
-    "For each fold, we train and validate a model and collect the metrics. To start with, we'll train with the gradient booster with default parameters to establish a baseline."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "e1c5c899",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import StratifiedKFold\n",
-    "from sklearn.ensemble import HistGradientBoostingClassifier\n",
-    "\n",
-    "s_kfold = StratifiedKFold(n_splits=5, shuffle=True)\n",
-    "\n",
-    "ycol = \"Class\"\n",
-    "\n",
-    "def x_y(df):\n",
-    "    y = df[ycol]\n",
-    "    x = df.drop(columns=ycol)\n",
-    "    return x, y"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 12,
    "id": "e769bae8",
    "metadata": {},
    "outputs": [],
@@ -1060,59 +958,103 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "db709e2f",
+   "metadata": {},
+   "source": [
+    "For each fold, we train and validate a model and collect the metrics. We use k-fold validation because of the small dataset size. Additionally, within each fold, we oversample the positive classification."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 41,
+   "id": "e1c5c899",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ycol = \"Class\"\n",
+    "xcols = [c for c in df_train.columns if not c in [ycol]]\n",
+    "\n",
+    "def x_y(df):\n",
+    "    y = df[ycol]\n",
+    "    x = df[xcols]\n",
+    "    return x, y\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
    "id": "fe30d9c7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import StratifiedKFold, RepeatedStratifiedKFold\n",
+    "from sklearn.ensemble import HistGradientBoostingClassifier\n",
+    "from imblearn.over_sampling import RandomOverSampler\n",
+    "\n",
+    "oversampler = RandomOverSampler(sampling_strategy=\"minority\")\n",
+    "\n",
+    "\n",
+    "def get_folds(k_fold, index, y):\n",
+    "    return (splits for splits in k_fold.split(index, y))\n",
+    "\n",
+    "def evaluate_gb_model(df, train_ids, val_ids):\n",
+    "    train_xy, valid_xy = df.iloc[train_ids], df.iloc[val_ids]\n",
+    "    \n",
+    "    train_x, train_y = x_y(train_xy)\n",
+    "    val_x, val_y = x_y(valid_xy)\n",
+    "    \n",
+    "    x_over, y_over = oversampler.fit_resample(train_x, train_y)\n",
+    "        \n",
+    "    gb = HistGradientBoostingClassifier(class_weight=\"balanced\")\n",
+    "    gb.fit(x_over, y_over) \n",
+    "    \n",
+    "    accuracy = gb.score(val_x, val_y)\n",
+    "    logloss = m_log_loss(gb, val_x, val_y)\n",
+    "\n",
+    "    return gb, logloss, accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "cea1b494",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fold: 0.. fold: 1.. fold: 2.. fold: 3.. fold: 4.. "
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "([HistGradientBoostingClassifier(categorical_features=['EJ'],\n",
-       "                                 class_weight='balanced'),\n",
-       "  HistGradientBoostingClassifier(categorical_features=['EJ'],\n",
-       "                                 class_weight='balanced'),\n",
-       "  HistGradientBoostingClassifier(categorical_features=['EJ'],\n",
-       "                                 class_weight='balanced'),\n",
-       "  HistGradientBoostingClassifier(categorical_features=['EJ'],\n",
-       "                                 class_weight='balanced'),\n",
-       "  HistGradientBoostingClassifier(categorical_features=['EJ'],\n",
-       "                                 class_weight='balanced')],\n",
-       " [2.077879322650687,\n",
-       "  3.1398887631737,\n",
-       "  4.77980095377754,\n",
-       "  5.442045854622507,\n",
-       "  5.442045854622507],\n",
-       " 4.176332149769388,\n",
-       " [0.9596774193548387,\n",
-       "  0.967741935483871,\n",
-       "  0.9186991869918699,\n",
-       "  0.926829268292683,\n",
-       "  0.926829268292683],\n",
-       " 0.9399554156831892)"
+       "(0.9351953842119066, 4.508560963061484)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "final_models, accuracy, metrics = [], [], []\n",
-    "for train_idx, valid_idx in s_kfold.split(df_train, df_train.Class):\n",
-    "    train_xy, valid_xy = df_train.iloc[train_idx], df_train.iloc[valid_idx]\n",
-    "    train_x, train_y = x_y(train_xy)\n",
-    "    valid_x, valid_y = x_y(valid_xy)\n",
-    "    \n",
-    "    gb = HistGradientBoostingClassifier(class_weight='balanced')\n",
-    "    gb.fit(train_x, train_y)\n",
-    "    \n",
-    "    metrics.append(m_log_loss(gb, valid_x, valid_y))\n",
-    "    accuracy.append(gb.score(valid_x, valid_y))\n",
-    "    \n",
-    "    final_models.append(gb)\n",
-    "    \n",
-    "final_models, metrics, np.mean(metrics), accuracy, np.mean(accuracy)"
+    "s_kfold = StratifiedKFold(n_splits=5, shuffle=False)\n",
+    "#rs_kfold = RepeatedStratifiedKFold()\n",
+    "\n",
+    "folds = get_folds(s_kfold, df_train.index, df_train.Class)\n",
+    "\n",
+    "gb_ensemble, loglosses, accuracies = [], [], []\n",
+    "\n",
+    "for i, (x_split, y_split) in enumerate(folds):\n",
+    "    print(f\"fold: {i}.. \", end=\"\")\n",
+    "    model, logloss, accuracy = evaluate_gb_model(df_train, x_split, y_split)\n",
+    "    gb_ensemble.append(model)\n",
+    "    loglosses.append(logloss)\n",
+    "    accuracies.append(accuracy)\n",
+    "np.mean(accuracies), np.mean(loglosses)"
    ]
   },
   {
@@ -1128,29 +1070,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 52,
    "id": "b90e2c91",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.9914961, 0.0085039],\n",
-       "       [0.9914961, 0.0085039],\n",
-       "       [0.9914961, 0.0085039],\n",
-       "       [0.9914961, 0.0085039],\n",
-       "       [0.9914961, 0.0085039]])"
+       "array([[0.98066315, 0.01933685],\n",
+       "       [0.98066315, 0.01933685],\n",
+       "       [0.98066315, 0.01933685],\n",
+       "       [0.98066315, 0.01933685],\n",
+       "       [0.98066315, 0.01933685]])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "preds = []\n",
-    "for gb in final_models:\n",
-    "    preds.append(gb.predict_proba(df_test))\n",
+    "for gb in gb_ensemble:\n",
+    "    preds.append(gb.predict_proba(df_test[xcols]))\n",
     "avg_preds = np.stack(preds).mean(axis=0)\n",
     "avg_preds"
    ]
