--- a/notebooks/kfold-with-greeks.ipynb
+++ b/notebooks/kfold-with-greeks.ipynb
@@ -1711,7 +1711,7 @@
    "outputs": [],
    "source": [
     "ycol = \"Alpha\"\n",
-    "xcols = [c for c in df_merged.columns if not c in [\"Id\", \"Class\", ycol]]\n",
+    "xcols = [c for c in df_merged.columns if not c in [\"Class\", ycol]]\n",
     "\n",
     "def x_y(df):\n",
     "    y = df[ycol]\n",
@@ -1761,7 +1761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "dc6c35d6",
    "metadata": {},
    "outputs": [
@@ -1769,25 +1769,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fold: 0.. fold: 1.. fold: 2.. fold: 3.. fold: 4.. fold: 5.. fold: 6.. fold: 7.. fold: 8.. fold: 9.. fold: 10.. fold: 11.. fold: 12.. fold: 13.. fold: 14.. fold: 15.. fold: 16.. fold: 17.. fold: 18.. fold: 19.. fold: 20.. fold: 21.. fold: 22.. fold: 23.. fold: 24.. fold: 25.. fold: 26.. fold: 27.. fold: 28.. fold: 29.. fold: 30.. fold: 31.. fold: 32.. fold: 33.. fold: 34.. fold: 35.. fold: 36.. fold: 37.. fold: 38.. fold: 39.. fold: 40.. fold: 41.. fold: 42.. fold: 43.. fold: 44.. fold: 45.. fold: 46.. fold: 47.. fold: 48.. fold: 49.. fold: 50.. fold: 51.. fold: 52.. fold: 53.. fold: 54.. fold: 55.. fold: 56.. fold: 57.. fold: 58.. fold: 59.. fold: 60.. fold: 61.. fold: 62.. fold: 63.. fold: 64.. fold: 65.. fold: 66.. fold: 67.. fold: 68.. fold: 69.. fold: 70.. fold: 71.. fold: 72.. fold: 73.. fold: 74.. fold: 75.. fold: 76.. fold: 77.. fold: 78.. fold: 79.. fold: 80.. fold: 81.. fold: 82.. fold: 83.. fold: 84.. fold: 85.. fold: 86.. fold: 87.. fold: 88.. fold: 89.. fold: 90.. fold: 91.. fold: 92.. fold: 93.. fold: 94.. fold: 95.. fold: 96.. fold: 97.. fold: 98.. fold: 99.. "
+      "fold: 0.. fold: 1.. fold: 2.. fold: 3.. fold: 4.. "
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(0.9214198836594395, 0.5829575420420173)"
+       "(0.9108838185156045, 0.5678134630942911)"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#s_kfold = StratifiedKFold(n_splits=5, shuffle=False)\n",
-    "rs_kfold = RepeatedStratifiedKFold(n_repeats=10, n_splits=10)\n",
+    "s_kfold = StratifiedKFold(n_splits=5, shuffle=False)\n",
+    "#rs_kfold = RepeatedStratifiedKFold()\n",
     "\n",
-    "folds = get_folds(rs_kfold, df_merged.index, df_merged.Alpha)\n",
+    "folds = get_folds(s_kfold, df_merged.index, df_merged.Alpha)\n",
     "\n",
     "gb_ensemble, loglosses, accuracies = [], [], []\n",
     "\n",
@@ -1813,25 +1813,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "b90e2c91",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[9.99031745e-01, 9.68255479e-04],\n",
-       "       [9.99031745e-01, 9.68255479e-04],\n",
-       "       [9.99031745e-01, 9.68255479e-04],\n",
-       "       [9.99031745e-01, 9.68255479e-04],\n",
-       "       [9.99031745e-01, 9.68255479e-04]])"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "final_preds = []\n",
     "for gb in gb_ensemble:\n",
@@ -1844,7 +1829,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "8e975005",
    "metadata": {},
    "outputs": [],
