--- a/notebooks/tabpfn-kfold-experiment.ipynb
+++ b/notebooks/tabpfn-kfold-experiment.ipynb
@@ -13,16 +13,17 @@
    "id": "d4218305",
    "metadata": {},
    "source": [
-    "Some experiments to get a good score for the [Identify Age-Related Conditions][0] kaggle competition using decision tree models.\n",
+    "Some experiments to get a good score for the [Identify Age-Related Conditions][0] kaggle competition [tabpfn][1]\n",
     "\n",
     "Start by importing commonly used modules that make it convenient to work with the fastai library. Some will be patched to make them work in non-standard ways but improve interactivity.\n",
     "\n",
-    "[0]: https://www.kaggle.com/competitions/icr-identify-age-related-conditions"
+    "[0]: https://www.kaggle.com/competitions/icr-identify-age-related-conditions\n",
+    "[1]: https://github.com/automl/TabPFN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "782631be",
    "metadata": {},
    "outputs": [],
@@ -43,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "7e366e70",
    "metadata": {},
    "outputs": [
@@ -79,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "72c643d8",
    "metadata": {},
    "outputs": [
@@ -89,7 +90,7 @@
        "(#4) [Path('/home/krm/.kaggle/input/icr-identify-age-related-conditions/test.csv'),Path('/home/krm/.kaggle/input/icr-identify-age-related-conditions/greeks.csv'),Path('/home/krm/.kaggle/input/icr-identify-age-related-conditions/train.csv'),Path('/home/krm/.kaggle/input/icr-identify-age-related-conditions/sample_submission.csv')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "9578190d",
    "metadata": {},
    "outputs": [
@@ -306,7 +307,7 @@
        "[5 rows x 58 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "3528aa41",
    "metadata": {},
    "outputs": [
@@ -334,7 +335,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "d653fccc",
    "metadata": {},
    "outputs": [
@@ -643,7 +644,7 @@
        "[8 rows x 56 columns]"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -662,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "95e14983",
    "metadata": {},
    "outputs": [
@@ -672,7 +673,7 @@
        "<Axes: ylabel='count'>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -703,7 +704,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "6263cd1a",
    "metadata": {},
    "outputs": [
@@ -722,7 +723,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -734,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "e5688f44",
    "metadata": {},
    "outputs": [
@@ -826,12 +827,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "id": "ec24e63a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "modes = df_train.mode().iloc[0]\n",
+    "\n",
     "def process_data(df):\n",
+    "    df.fillna(modes, inplace=True)\n",
     "    df[\"EJ\"] = pd.Categorical(df.EJ).codes\n",
     "    df[\"Id\"] = pd.Categorical(df.Id).codes\n",
     "\n",
@@ -842,8 +846,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "4384df08",
+   "execution_count": 16,
+   "id": "a304985a",
    "metadata": {},
    "outputs": [
     {
@@ -868,11 +872,11 @@
       " 10  BD      617 non-null    float64\n",
       " 11  BN      617 non-null    float64\n",
       " 12  BP      617 non-null    float64\n",
-      " 13  BQ      557 non-null    float64\n",
+      " 13  BQ      617 non-null    float64\n",
       " 14  BR      617 non-null    float64\n",
       " 15  BZ      617 non-null    float64\n",
-      " 16  CB      615 non-null    float64\n",
-      " 17  CC      614 non-null    float64\n",
+      " 16  CB      617 non-null    float64\n",
+      " 17  CC      617 non-null    float64\n",
       " 18  CD      617 non-null    float64\n",
       " 19  CF      617 non-null    float64\n",
       " 20  CH      617 non-null    float64\n",
@@ -888,7 +892,7 @@
       " 30  DI      617 non-null    float64\n",
       " 31  DL      617 non-null    float64\n",
       " 32  DN      617 non-null    float64\n",
-      " 33  DU      616 non-null    float64\n",
+      " 33  DU      617 non-null    float64\n",
       " 34  DV      617 non-null    float64\n",
       " 35  DY      617 non-null    float64\n",
       " 36  EB      617 non-null    float64\n",
@@ -896,22 +900,22 @@
       " 38  EG      617 non-null    float64\n",
       " 39  EH      617 non-null    float64\n",
       " 40  EJ      617 non-null    int8   \n",
-      " 41  EL      557 non-null    float64\n",
+      " 41  EL      617 non-null    float64\n",
       " 42  EP      617 non-null    float64\n",
       " 43  EU      617 non-null    float64\n",
-      " 44  FC      616 non-null    float64\n",
+      " 44  FC      617 non-null    float64\n",
       " 45  FD      617 non-null    float64\n",
       " 46  FE      617 non-null    float64\n",
       " 47  FI      617 non-null    float64\n",
-      " 48  FL      616 non-null    float64\n",
+      " 48  FL      617 non-null    float64\n",
       " 49  FR      617 non-null    float64\n",
-      " 50  FS      615 non-null    float64\n",
+      " 50  FS      617 non-null    float64\n",
       " 51  GB      617 non-null    float64\n",
       " 52  GE      617 non-null    float64\n",
       " 53  GF      617 non-null    float64\n",
       " 54  GH      617 non-null    float64\n",
       " 55  GI      617 non-null    float64\n",
-      " 56  GL      616 non-null    float64\n",
+      " 56  GL      617 non-null    float64\n",
       " 57  Class   617 non-null    int64  \n",
       "dtypes: float64(55), int16(1), int64(1), int8(1)\n",
       "memory usage: 271.9 KB\n"
@@ -944,7 +948,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "id": "e769bae8",
    "metadata": {},
    "outputs": [],
@@ -962,12 +966,12 @@
    "id": "db709e2f",
    "metadata": {},
    "source": [
-    "For each fold, we train and validate a model and collect the metrics. We use k-fold validation because of the small dataset size. Additionally, within each fold, we oversample the positive classification."
+    "For each fold, we train and validate a model and collect the metrics. We use k-fold validation because of the small dataset size."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 18,
    "id": "e1c5c899",
    "metadata": {},
    "outputs": [],
@@ -978,64 +982,67 @@
     "def x_y(df):\n",
     "    y = df[ycol]\n",
     "    x = df[xcols]\n",
-    "    return x, y\n",
-    "\n"
+    "    return x, y"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 25,
    "id": "fe30d9c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import StratifiedKFold, RepeatedStratifiedKFold\n",
-    "from sklearn.ensemble import HistGradientBoostingClassifier\n",
-    "from imblearn.over_sampling import RandomOverSampler\n",
-    "\n",
-    "oversampler = RandomOverSampler(sampling_strategy=\"minority\")\n",
-    "\n",
+    "from tabpfn import TabPFNClassifier\n",
     "\n",
     "def get_folds(k_fold, index, y):\n",
     "    return (splits for splits in k_fold.split(index, y))\n",
     "\n",
-    "def evaluate_gb_model(df, train_ids, val_ids):\n",
+    "def evaluate_tabpfn_model(df, train_ids, val_ids):\n",
     "    train_xy, valid_xy = df.iloc[train_ids], df.iloc[val_ids]\n",
     "    \n",
     "    train_x, train_y = x_y(train_xy)\n",
     "    val_x, val_y = x_y(valid_xy)\n",
+    "            \n",
+    "    tb = TabPFNClassifier(device='cpu', N_ensemble_configurations=32)\n",
+    "    tb.fit(train_x, train_y)\n",
     "    \n",
-    "    x_over, y_over = oversampler.fit_resample(train_x, train_y)\n",
-    "        \n",
-    "    gb = HistGradientBoostingClassifier(class_weight=\"balanced\")\n",
-    "    gb.fit(x_over, y_over) \n",
-    "    \n",
-    "    accuracy = gb.score(val_x, val_y)\n",
-    "    logloss = m_log_loss(gb, val_x, val_y)\n",
+    "    preds = tb.predict_proba(val_x)\n",
+    "    class1_preds = preds[:,1]\n",
+    "    logloss = balanced_log_loss(val_y, class1_preds)\n",
     "\n",
-    "    return gb, logloss, accuracy"
+    "    return tb, logloss"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
-   "id": "c7d0bca2",
+   "execution_count": 26,
+   "id": "cea1b494",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "fold: 0.. fold: 1.. fold: 2.. fold: 3.. fold: 4.. "
+      "fold: 0.. Loading model that can be used for inference only\n",
+      "Using a Transformer with 25.82 M parameters\n",
+      "fold: 1.. Loading model that can be used for inference only\n",
+      "Using a Transformer with 25.82 M parameters\n",
+      "fold: 2.. Loading model that can be used for inference only\n",
+      "Using a Transformer with 25.82 M parameters\n",
+      "fold: 3.. Loading model that can be used for inference only\n",
+      "Using a Transformer with 25.82 M parameters\n",
+      "fold: 4.. Loading model that can be used for inference only\n",
+      "Using a Transformer with 25.82 M parameters\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "(0.9352084972462628, 4.508225692473323)"
+       "0.4226546847640137"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,15 +1053,14 @@
     "\n",
     "folds = get_folds(s_kfold, df_train.index, df_train.Class)\n",
     "\n",
-    "gb_ensemble, loglosses, accuracies = [], [], []\n",
+    "tb_ensemble, loglosses = [], []\n",
     "\n",
     "for i, (x_split, y_split) in enumerate(folds):\n",
     "    print(f\"fold: {i}.. \", end=\"\")\n",
-    "    model, logloss, accuracy = evaluate_gb_model(df_train, x_split, y_split)\n",
-    "    gb_ensemble.append(model)\n",
+    "    model, logloss = evaluate_tabpfn_model(df_train, x_split, y_split)\n",
+    "    tb_ensemble.append(model)\n",
     "    loglosses.append(logloss)\n",
-    "    accuracies.append(accuracy)\n",
-    "np.mean(accuracies), np.mean(loglosses)"
+    "np.mean(loglosses)"
    ]
   },
   {
@@ -1065,41 +1071,41 @@
     "\n",
     "# Submission\n",
     "\n",
-    "We'll get predictions from the ensemble by averaging all the predictions from the individual random forest models. Similar to the training test, we will not impute missing values.\n"
+    "We'll get predictions from the ensemble by averaging all the predictions from the individual tabpfn models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 28,
    "id": "b90e2c91",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.98066315, 0.01933685],\n",
-       "       [0.98066315, 0.01933685],\n",
-       "       [0.98066315, 0.01933685],\n",
-       "       [0.98066315, 0.01933685],\n",
-       "       [0.98066315, 0.01933685]])"
+       "array([[0.63104784, 0.3689521 ],\n",
+       "       [0.6310271 , 0.36897293],\n",
+       "       [0.63100606, 0.36899394],\n",
+       "       [0.6309851 , 0.36901492],\n",
+       "       [0.63096416, 0.3690359 ]], dtype=float32)"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "preds = []\n",
-    "for gb in gb_ensemble:\n",
-    "    preds.append(gb.predict_proba(df_test[xcols]))\n",
+    "for tb in tb_ensemble:\n",
+    "    preds.append(tb.predict_proba(df_test[xcols]))\n",
     "avg_preds = np.stack(preds).mean(axis=0)\n",
     "avg_preds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 29,
    "id": "8e975005",
    "metadata": {},
    "outputs": [],
