--- a/notebooks/ensemble-them-all.ipynb
+++ b/notebooks/ensemble-them-all.ipynb
@@ -13,7 +13,7 @@
    "id": "d4218305",
    "metadata": {},
    "source": [
-    "Some experiments to get a good score for the [Identify Age-Related Conditions][0] kaggle competition using decision tree models.\n",
+    "Some experiments to get a good score for the [Identify Age-Related Conditions][0] kaggle competition.\n",
     "\n",
     "Start by importing commonly used modules that make it convenient to work with the fastai library. Some will be patched to make them work in non-standard ways but improve interactivity.\n",
     "\n",
@@ -831,95 +831,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "modes = df_train.mode().iloc[0]\n",
     "def process_data(df):\n",
+    "    df.fillna(modes, inplace=True)\n",
     "    df[\"EJ\"] = pd.Categorical(df.EJ).codes\n",
     "    df[\"Id\"] = pd.Categorical(df.Id).codes\n",
+    "\n",
     "\n",
     "    \n",
     "process_data(df_train)\n",
     "process_data(df_test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "4384df08",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 617 entries, 0 to 616\n",
-      "Data columns (total 58 columns):\n",
-      " #   Column  Non-Null Count  Dtype  \n",
-      "---  ------  --------------  -----  \n",
-      " 0   Id      617 non-null    int16  \n",
-      " 1   AB      617 non-null    float64\n",
-      " 2   AF      617 non-null    float64\n",
-      " 3   AH      617 non-null    float64\n",
-      " 4   AM      617 non-null    float64\n",
-      " 5   AR      617 non-null    float64\n",
-      " 6   AX      617 non-null    float64\n",
-      " 7   AY      617 non-null    float64\n",
-      " 8   AZ      617 non-null    float64\n",
-      " 9   BC      617 non-null    float64\n",
-      " 10  BD      617 non-null    float64\n",
-      " 11  BN      617 non-null    float64\n",
-      " 12  BP      617 non-null    float64\n",
-      " 13  BQ      557 non-null    float64\n",
-      " 14  BR      617 non-null    float64\n",
-      " 15  BZ      617 non-null    float64\n",
-      " 16  CB      615 non-null    float64\n",
-      " 17  CC      614 non-null    float64\n",
-      " 18  CD      617 non-null    float64\n",
-      " 19  CF      617 non-null    float64\n",
-      " 20  CH      617 non-null    float64\n",
-      " 21  CL      617 non-null    float64\n",
-      " 22  CR      617 non-null    float64\n",
-      " 23  CS      617 non-null    float64\n",
-      " 24  CU      617 non-null    float64\n",
-      " 25  CW      617 non-null    float64\n",
-      " 26  DA      617 non-null    float64\n",
-      " 27  DE      617 non-null    float64\n",
-      " 28  DF      617 non-null    float64\n",
-      " 29  DH      617 non-null    float64\n",
-      " 30  DI      617 non-null    float64\n",
-      " 31  DL      617 non-null    float64\n",
-      " 32  DN      617 non-null    float64\n",
-      " 33  DU      616 non-null    float64\n",
-      " 34  DV      617 non-null    float64\n",
-      " 35  DY      617 non-null    float64\n",
-      " 36  EB      617 non-null    float64\n",
-      " 37  EE      617 non-null    float64\n",
-      " 38  EG      617 non-null    float64\n",
-      " 39  EH      617 non-null    float64\n",
-      " 40  EJ      617 non-null    int8   \n",
-      " 41  EL      557 non-null    float64\n",
-      " 42  EP      617 non-null    float64\n",
-      " 43  EU      617 non-null    float64\n",
-      " 44  FC      616 non-null    float64\n",
-      " 45  FD      617 non-null    float64\n",
-      " 46  FE      617 non-null    float64\n",
-      " 47  FI      617 non-null    float64\n",
-      " 48  FL      616 non-null    float64\n",
-      " 49  FR      617 non-null    float64\n",
-      " 50  FS      615 non-null    float64\n",
-      " 51  GB      617 non-null    float64\n",
-      " 52  GE      617 non-null    float64\n",
-      " 53  GF      617 non-null    float64\n",
-      " 54  GH      617 non-null    float64\n",
-      " 55  GI      617 non-null    float64\n",
-      " 56  GL      616 non-null    float64\n",
-      " 57  Class   617 non-null    int64  \n",
-      "dtypes: float64(55), int16(1), int64(1), int8(1)\n",
-      "memory usage: 271.9 KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df_train.info()"
    ]
   },
   {
@@ -944,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "e769bae8",
    "metadata": {},
    "outputs": [],
@@ -967,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 16,
    "id": "e1c5c899",
    "metadata": {},
    "outputs": [],
@@ -984,41 +905,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 19,
    "id": "fe30d9c7",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import StratifiedKFold, RepeatedStratifiedKFold\n",
-    "from sklearn.ensemble import HistGradientBoostingClassifier\n",
-    "from imblearn.over_sampling import RandomOverSampler\n",
-    "\n",
-    "oversampler = RandomOverSampler(sampling_strategy=\"minority\")\n",
-    "\n",
+    "from xgboost import XGBClassifier\n",
     "\n",
     "def get_folds(k_fold, index, y):\n",
     "    return (splits for splits in k_fold.split(index, y))\n",
     "\n",
-    "def evaluate_gb_model(df, train_ids, val_ids):\n",
+    "def evaluate_xgboost_model(df, train_ids, val_ids):\n",
     "    train_xy, valid_xy = df.iloc[train_ids], df.iloc[val_ids]\n",
     "    \n",
     "    train_x, train_y = x_y(train_xy)\n",
     "    val_x, val_y = x_y(valid_xy)\n",
+    "            \n",
+    "    m = XGBClassifier()\n",
+    "    m.fit(train_x, train_y) \n",
     "    \n",
-    "    x_over, y_over = oversampler.fit_resample(train_x, train_y)\n",
-    "        \n",
-    "    gb = HistGradientBoostingClassifier(class_weight=\"balanced\")\n",
-    "    gb.fit(x_over, y_over) \n",
+    "    accuracy = m.score(val_x, val_y)\n",
     "    \n",
-    "    accuracy = gb.score(val_x, val_y)\n",
-    "    logloss = m_log_loss(gb, val_x, val_y)\n",
-    "\n",
-    "    return gb, logloss, accuracy"
+    "    preds = m.predict_proba(val_x)\n",
+    "    class1_preds = preds[:,1]\n",
+    "    logloss = balanced_log_loss(val_y, class1_preds)\n",
+    "   \n",
+    "    return m, logloss, accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 20,
    "id": "c7d0bca2",
    "metadata": {},
    "outputs": [
@@ -1032,10 +950,21 @@
     {
      "data": {
       "text/plain": [
-       "(0.9352084972462628, 4.508225692473323)"
+       "(0.9254786257539994,\n",
+       " 0.4579261437351125,\n",
+       " [0.9354838709677419,\n",
+       "  0.8951612903225806,\n",
+       "  0.943089430894309,\n",
+       "  0.9024390243902439,\n",
+       "  0.9512195121951219],\n",
+       " [0.26460770927410354,\n",
+       "  0.5320918365650761,\n",
+       "  0.5134925763800575,\n",
+       "  0.6392264869117542,\n",
+       "  0.340212109544571])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1046,15 +975,15 @@
     "\n",
     "folds = get_folds(s_kfold, df_train.index, df_train.Class)\n",
     "\n",
-    "gb_ensemble, loglosses, accuracies = [], [], []\n",
+    "m_ensemble, loglosses, accuracies = [], [], []\n",
     "\n",
     "for i, (x_split, y_split) in enumerate(folds):\n",
     "    print(f\"fold: {i}.. \", end=\"\")\n",
-    "    model, logloss, accuracy = evaluate_gb_model(df_train, x_split, y_split)\n",
-    "    gb_ensemble.append(model)\n",
+    "    model, logloss, accuracy = evaluate_xgboost_model(df_train, x_split, y_split)\n",
+    "    m_ensemble.append(model)\n",
     "    loglosses.append(logloss)\n",
     "    accuracies.append(accuracy)\n",
-    "np.mean(accuracies), np.mean(loglosses)"
+    "np.mean(accuracies), np.mean(loglosses), accuracies, loglosses"
    ]
   },
   {
@@ -1070,25 +999,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": null,
    "id": "b90e2c91",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.98066315, 0.01933685],\n",
-       "       [0.98066315, 0.01933685],\n",
-       "       [0.98066315, 0.01933685],\n",
-       "       [0.98066315, 0.01933685],\n",
-       "       [0.98066315, 0.01933685]])"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "preds = []\n",
     "for gb in gb_ensemble:\n",
@@ -1099,7 +1013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "8e975005",
    "metadata": {},
    "outputs": [],
